--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,9 @@
 pluginManagement {
     repositories {
+        //本地 repo 制品库
+        maven{
+            url "${rootDir}/repo"
+        }
         maven {
             url 'https://jitpack.io'
             allowInsecureProtocol = true // 如果 url 为 http 协议，需要添加此项；https 可不用
@@ -17,6 +21,10 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        //本地 repo 制品库
+        maven{
+            url "${rootDir}/repo"
+        }
         maven {
             url 'https://jitpack.io'
             allowInsecureProtocol = true // 如果 url 为 http 协议，需要添加此项；https 可不用
